# nix-agent

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix
src/: lib.rs  main.rs
src/ast/: mod.rs
src/config/: mod.rs
src/execution/: mod.rs
src/models/: manager.rs  mod.rs
src/plan/: mod.rs
src/rag/: mod.rs
src/ui/: diff.rs  mod.rs
