[package]
name = "nix-agent"
version = "0.1.0"
edition = "2021"

[dependencies]
# Nix AST parsing
rnix = "0.11.0"
rowan = "0.15.0"

# Embedded DB for the local RAG index
rusqlite = { version = "0.31.0", features = ["bundled"] }

# Async runtime and CLI/TUI interface
tokio = { version = "1.35.0", features = ["full"] }
clap = { version = "4.4.0", features = ["derive"] }
ratatui = "0.26.0"
crossterm = "0.27.0"

# Serialization and trace logging
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
anyhow = "1.0.79"

# Host hardware inspection (RAM tier detection) — always on.
sysinfo = "0.33"

# Embedded inference stack (optional, behind the `embedded-llm` feature).
# `llama-cpp-2` builds llama.cpp from C++ source and requires a C/C++ toolchain
# and cmake; `hf-hub` fetches the GGUF weights on first run.
hf-hub = { version = "0.3", optional = true }
llama-cpp-2 = { version = "0.1", optional = true }
encoding_rs = { version = "0.8", optional = true }

[features]
default = []
# Compile the in-process GGUF inference engine + Hugging Face downloader.
embedded-llm = ["dep:hf-hub", "dep:llama-cpp-2", "dep:encoding_rs"]
# Native GPU acceleration backends; each implies `embedded-llm`.
metal = ["embedded-llm", "llama-cpp-2/metal"]
vulkan = ["embedded-llm", "llama-cpp-2/vulkan"]
