[package]
name = "nix-agent"
version = "0.1.0"
edition = "2021"

[dependencies]
# Nix AST parsing
rnix = "0.11.0"
rowan = "0.15.0"

# Embedded DB for the local RAG index
rusqlite = { version = "0.31.0", features = ["bundled"] }

# Async runtime and CLI/TUI interface
tokio = { version = "1.35.0", features = ["full"] }
clap = { version = "4.4.0", features = ["derive"] }
ratatui = "0.26.0"
crossterm = "0.27.0"

# Serialization and trace logging
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
anyhow = "1.0.79"

# Interactive CLI / UX layer ("cyberpunk/netrunner" presentation).
dialoguer = "0.11"      # interactive menus, confirms, model selection
similar = "2.5"         # text diffing for the apply preview
console = "0.15"        # styled, high-contrast terminal output
indicatif = "0.17"      # download progress bars / spinners
directories = "5.0"     # canonical XDG cache/data paths
ureq = "2.12"           # streaming HTTP for `models pull` (rustls, no openssl)

# Host hardware inspection (RAM tier detection) — always on.
sysinfo = "0.33"

# Embedded inference stack (optional, behind the `embedded-llm` feature).
# `llama-cpp-2` builds llama.cpp from C++ source and requires a C/C++ toolchain
# and cmake; `hf-hub` fetches the GGUF weights on first run.
hf-hub = { version = "0.3", optional = true }
llama-cpp-2 = { version = "0.1", optional = true }
encoding_rs = { version = "0.8", optional = true }

[features]
default = []
# Compile the in-process GGUF inference engine + Hugging Face downloader.
embedded-llm = ["dep:hf-hub", "dep:llama-cpp-2", "dep:encoding_rs"]
# Native GPU acceleration backends; each implies `embedded-llm`.
metal = ["embedded-llm", "llama-cpp-2/metal"]
vulkan = ["embedded-llm", "llama-cpp-2/vulkan"]

# Unix-only: privilege check for the `apply` self-escalation (sudo re-exec).
[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["user"] }
